[gd_scene load_steps=6 format=3 uid="uid://baa1j8puu2dnd"]

[ext_resource type="Script" path="res://Main/subviewports.gd" id="1_bfbif"]
[ext_resource type="PackedScene" uid="uid://b3srilwbdd7el" path="res://Level/level.tscn" id="2_mn10p"]
[ext_resource type="Shader" path="res://Main/split_screen.gdshader" id="3_t2fq5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kv5yg"]
shader = ExtResource("3_t2fq5")
shader_parameter/viewport_size = null
shader_parameter/split_active = null
shader_parameter/player1_position = null
shader_parameter/player2_position = null
shader_parameter/split_line_thickness = null
shader_parameter/split_line_color = null

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_20t2v"]
size = Vector2(480, 270)

[node name="Main" type="Node"]

[node name="SubViewports" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfbif")
max_separation = 400.0

[node name="Container1" type="SubViewportContainer" parent="SubViewports"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Viewport1" type="SubViewport" parent="SubViewports/Container1"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="Level" parent="SubViewports/Container1/Viewport1" instance=ExtResource("2_mn10p")]

[node name="Camera1" type="Camera2D" parent="SubViewports/Container1/Viewport1"]
texture_filter = 1

[node name="Container2" type="SubViewportContainer" parent="SubViewports"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Viewport2" type="SubViewport" parent="SubViewports/Container2"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="Camera2" type="Camera2D" parent="SubViewports/Container2/Viewport2"]
texture_filter = 1

[node name="View" type="TextureRect" parent="SubViewports"]
texture_filter = 1
material = SubResource("ShaderMaterial_kv5yg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_20t2v")
expand_mode = 1
